laborations/lab1/test/bad/bad061.cc
int foo() {
	if 1; return 2;
}
